# KALPA_Chart-Converter

./: .clang-format  .gitignore  README.md  formatter.sh
converter/: CMakeLists.txt  config.json
converter/include/: constants.hpp  parser.hpp  processing.hpp
converter/src/: constants.cpp  main.cpp  parser.cpp  processing.cpp
database/boxel-adventure/: config.json
database/bride-in-dream/: config.json
database/cross-time/: config.json
database/diva-of-avalon/: config.json
database/kitsunebi/: config.json
database/reincarnation/: config.json
utils/: setup.sh
utils/downloader/: downloader.go  go.mod  go.sum
utils/frame_viewer/: CMakeLists.txt  frame_viewer.cpp  video.cpp  video.hpp
utils/thumbnail/: check_pixels.cpp  check_pixels.py  thumbnail.cpp  thumbnail.py
utils/uploader/: go.mod  no_path.txt  uploader.go
